@@ -9,10 +9,13 @@ Version 3.4 (X X, 2021) - ""
 Fixed multiple issues in the new libPinMAME (previously known as PinMAMEdll) library and completely revamp API (see libpinmame.h)
 Fixed 64bit version of PinMAME32
 Reenabled DirectDraw support for 64bit windows compiles of PinMAME, PinMAME32 and VPinMAME
+Fixed some problems with the ROM audit
 
 Added support to compile for Windows ARM64 (not all features/variants though, as some external libs do not feature ARM64 support yet)
 
 Updated LISY support to 5.27-39 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'HOme' Pinballs)
+
+Make Automatic Sound Dump functionality of PinMAME(32) more robust in its silence detection
 
 *** CORE/CPU ***
 One more audiophile tweak: added proper dithering after resampling to the final output sample rate
@@ -26,7 +29,7 @@ Alvin G.: U.S.A. Football (Redemption, P08)
 
 Correct Dumps:
 Mac Attack
-Riverboat Gambler PA-7 (using L-1 sound now, might still be too new but better than L-2 anyhow)
+Riverboat Gambler PA-7 (using L-1 sound now, might still be too new, but better than L-2 anyhow)
 Tales of the Arabian Nights 0.4 Prototype (see above)
 
 Clones:
